add makefile to build from project root

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,7 @@
-EXENAME          = emulator
+EXENAME = emulator
+EXEPATH = ./
 
-MAINFILES        = emulator.c \
+MAINFILES = emulator.c \
 	memory_mapped.c \
 	config_file/config_file.c \
 	config_file/rominfo.c \
@@ -28,35 +29,23 @@ MUSASHIGENCFILES = m68kops.c
 MUSASHIGENHFILES = m68kops.h
 MUSASHIGENERATOR = m68kmake
 
-# EXE = .exe
-# EXEPATH = .\\
-EXE =
-EXEPATH = ./
+.CFILES = $(MAINFILES) $(MUSASHIFILES) $(MUSASHIGENCFILES)
+.OFILES = $(.CFILES:%.c=%.o)
 
-.CFILES   = $(MAINFILES) $(MUSASHIFILES) $(MUSASHIGENCFILES)
-.OFILES   = $(.CFILES:%.c=%.o)
+TARGET = $(EXENAME)
 
-CC        = gcc
-WARNINGS  = -Wall -Wextra -pedantic
-CFLAGS    = $(WARNINGS) -I. -march=armv8-a -mfloat-abi=hard -mfpu=neon-fp-armv8 -O3 -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE
-LFLAGS    = $(WARNINGS) `sdl2-config --libs`
-
-TARGET = $(EXENAME)$(EXE)
-
-DELETEFILES = $(MUSASHIGENCFILES) $(MUSASHIGENHFILES) $(.OFILES) $(TARGET) $(MUSASHIGENERATOR)$(EXE)
-
+DELETEFILES = $(MUSASHIGENCFILES) $(MUSASHIGENHFILES) $(.OFILES) $(TARGET) $(MUSASHIGENERATOR)
 
 all: $(TARGET)
 
 clean:
 	rm -f $(DELETEFILES)
 
-
 $(TARGET): $(MUSASHIGENHFILES) $(.OFILES) Makefile
 	$(CC) -o $@ $(.OFILES) -O3 -pthread $(LFLAGS) -lm
 
-$(MUSASHIGENCFILES) $(MUSASHIGENHFILES): $(MUSASHIGENERATOR)$(EXE)
-	$(EXEPATH)$(MUSASHIGENERATOR)$(EXE)
+$(MUSASHIGENCFILES) $(MUSASHIGENHFILES): $(MUSASHIGENERATOR)
+	$(EXEPATH)$(MUSASHIGENERATOR)
 
-$(MUSASHIGENERATOR)$(EXE):  $(MUSASHIGENERATOR).c
-	$(CC) -o  $(MUSASHIGENERATOR)$(EXE)  $(MUSASHIGENERATOR).c
+$(MUSASHIGENERATOR): $(MUSASHIGENERATOR).c
+	$(HOSTCC) $(HOSTCFLAGS) -o $(MUSASHIGENERATOR) $(MUSASHIGENERATOR).c
